--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,53 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">babyTimeChart</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">아기 시간표</string>
+    <string name="action_settings">설정</string>
     <string name="add_values">Add values to the chart</string>
     <string name="x">X</string>
     <string name="y">Y</string>
     <string name="add">Add</string>
     <string name="new_series">New series</string>
-    <string name="notice">* 수유와 놀이 수면만 그래프에 표시 됩니다.</string>
-    <string name="feeding">먹기</string>
+    
+    <!--  Tab Title  -->
+    <string name="eating">먹기</string>
     <string name="playing">놀기</string>
     <string name="sleeping">잠자기</string>
     <string name="etc">기타</string>
-    <string name="save">저장</string>
-    <string name="cancel">취소</string>
-
+  
+    <!-- 먹기 Tab -->
     <string name="mothersmilk">모유</string>
     <string name="milkpowder">분유</string>
     <string name="babyfood">이유식</string>
-    <string name="babypoop">아기똥</string>
-
-    <string name="memo">메모</string>
-    <string name="memo_hint">메모를 입력하세요</string>
-
-    <string name="stime_titile">시작</string>
-    <string name="etime_titile">종료</string>
-
-    <string name="minus_small_time">-20분</string>
-    <string name="minus_big_time">-5분</string>
-    <string name="plus_small_time">+5분</string>
-    <string name="plus_big_time">+20분</string>
-
+    
+    <string name="eating_type_direct">직접 수유</string>
+    <string name="eating_type_bottle">유축 수유</string>
+    
     <string name="minus_small_ml">-20ml</string>
     <string name="minus_big_ml">-10ml</string>
     <string name="plus_small_ml">+10ml</string>
     <string name="plus_big_ml">+20ml</string>
 
-    <string name="feeding_type_direct">직접 수유</string>
-    <string name="feeding_type_bottle">유축 수유</string>
-
-    <string name="tab_1">먹기</string>
-    <string name="tab_2">놀기</string>
-    <string name="tab_3">잠자기</string>
-    <string name="tab_4">기타</string>
+    <!-- 놀기 Tab -->
+    <string name="mom">엄마</string>
+    <string name="daddy">아빠</string>
+    <string name="family">가족</string>
+    <string name="friend">친구</string>    
     
+    <!--  잠자기 Tab -->
+    <string name="nap">낮잠</string>
+    <string name="night_sleep">밤잠</string>
+    
+    <!-- 기타 Tab -->
+    <string name="bath">목욕</string>
+    <string name="babypoop">아기 응가</string>
+    
+    <!--  공통  -->
+    <string name="save">저장</string>
+    <string name="cancel">취소</string>
+    
+    <string name="stime_titile">시작 시간</string>
+    <string name="etime_titile">종료 시간</string>
+    
+    <string name="minus_small_time">-20분</string>
+    <string name="minus_big_time">-5분</string>
+    <string name="plus_small_time">+5분</string>
+    <string name="plus_big_time">+20분</string>
+    
+    <string name="memo">메모</string>
+    <string name="memo_hint">메모를 입력하세요</string>
+    
+    <string name="notice">* 수유와 놀이 수면만 그래프에 표시 됩니다.</string>
     <string name="empty_data">아래 버튼을 눌러 아기의 패턴을 입력하세요.</string>
-    <string name="time_err">마지막으로 지정한 시간보다 더 빠른 시간으로 설정 할 수 없습니다.</string>
+    <string name="time_err1">마지막으로 지정한 시간보다 빠른 시간으로 설정 할 수 없습니다.</string>
+    <string name="time_err2">시작 시간보다  빠른 시간으로 설정 할 수 없습니다.</string>
+    <string name="time_err3">종료 시간보다  늦은 시간으로 설정 할 수 없습니다.</string>
 </resources>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
