--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="add">Add</string>
     <string name="new_series">New series</string>
     <string name="count_day">일</string>
-    <string name="action_text1">S</string>
+    <string name="action_text1">`s</string>
     
     <string name="save">저장</string>
     <string name="cancel">취소</string>
