--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -5,87 +5,89 @@
     <string name="app_name">아기 시간표</string>
     <string name="first">first</string>
     <string name="second">second</string>
-    <string name="count_day">일</string>
+    <string name="count_day">日</string>
     <string name="action_text1">`s</string>
-    <string name="action_settings">설정</string>
-    <string name="action_help">도움말</string>
-    <string name="save">저 장</string>
-    <string name="cancel">취 소</string>
-    <string name="confirm">확 인</string>
-    <string name="stime_titile">시작 시간</string>
-    <string name="etime_titile">종료 시간</string>
-    <string name="minus_small_time">-20분</string>
-    <string name="minus_big_time">-5분</string>
-    <string name="plus_small_time">+5분</string>
-    <string name="plus_big_time">+20분</string>
-    <string name="memo">메 모</string>
-    <string name="memo_hint">메모를 입력하세요</string>
-    <string name="notice">* 수유와 놀이 수면만 그래프에 표시 됩니다.</string>
-    <string name="empty_data">아래 버튼을 눌러 아기의 패턴을 입력하세요.</string>
-    <string name="time_err1">마지막으로 지정한 시간보다 빠른 시간으로 설정 할 수 없습니다.</string>
-    <string name="time_err2">시작 시간보다  빠른 시간으로 설정 할 수 없습니다.</string>
-    <string name="time_err3">종료 시간보다  늦은 시간으로 설정 할 수 없습니다.</string>
-    <string name="time_err4">종료 시간 입력은 오늘만 가능합니다.</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
+    
+    <string name="save">セーブ</string>
+    <string name="cancel">キャンセル</string>
+    <string name="confirm">ok</string>
+    <string name="stime_titile">開始時間</string>
+    <string name="etime_titile">終了時間</string>
+    <string name="minus_small_time">-20分</string>
+    <string name="minus_big_time">-5分</string>
+    <string name="plus_small_time">+5分</string>
+    <string name="plus_big_time">+20分</string>
+    <string name="memo">M e m o</string>
+    <string name="memo_hint">メモを入力してください.</string>
+    <string name="notice">* 表をクリックすると、メモが表示されます。</string>
+    <string name="empty_data">下のボタンを押して、赤ちゃんのパターンを入力してください。</string>
+    <string name="time_err1">最後に、指定した時間よりも早い時間に設定することはできません。</string>
+    <string name="time_err2">開始時間よりも早い時間に設定することはできません。</string>
+    <string name="time_err3">終了時間より遅い時間に設定することはできません。</string>
+    <string name="time_err4">終了時刻の入力は、今日だけ可能です。</string>
+    <string name="screenshot">The screenshots have been saved.</string>
+    <string name="share">Share</string>
 
     <!-- Tab Title -->
-    <string name="eating">먹 기</string>
-    <string name="playing">놀 기</string>
-    <string name="sleeping">잠 자 기</string>
-    <string name="etc">기 타</string>
+    <string name="eating">食べる</string>
+    <string name="playing">遊ぶ</string>
+    <string name="sleeping">睡眠</string>
+    <string name="etc">など</string>
 
     <!-- 먹기 Tab -->
-    <string name="mothersmilk">모 유</string>
-    <string name="milkpowder">분 유</string>
-    <string name="babyfood">이 유 식</string>
-    <string name="eating_type_direct">직접 수유</string>
-    <string name="eating_type_bottle">유축 수유</string>
+    <string name="mothersmilk">母乳</string>
+    <string name="milkpowder">粉ミルク</string>
+    <string name="babyfood">離乳食</string>
+    <string name="eating_type_direct">直接授乳</string>
+    <string name="eating_type_bottle">ボトル給餌</string>
     <string name="minus_small_ml">-20ml</string>
     <string name="minus_big_ml">-10ml</string>
     <string name="plus_small_ml">+10ml</string>
     <string name="plus_big_ml">+20ml</string>
 
     <!-- 놀기 Tab -->
-    <string name="mom">엄 마</string>
-    <string name="daddy">아 빠</string>
-    <string name="toy">장난감</string>
-    
+    <string name="mom">ママ</string>
+    <string name="daddy">パパ</string>
+    <string name="toy">おもちゃ</string>
+
     <!-- 잠자기 Tab -->
-    <string name="nap">낮 잠</string>
-    <string name="night_sleep">밤 잠</string>
+    <string name="nap">昼寝</string>
+    <string name="night_sleep">夜の睡眠</string>
 
     <!-- 기타 Tab -->
-    <string name="bath">목 욕</string>
-    <string name="babypoo">아기 응가</string>
+    <string name="bath">入浴</string>
+    <string name="babypoo">あかちゃん うんこ </string>
 
     <!-- 설정 -->
-    <string name="setting">설 정</string>
-    <string name="normal">색상 및 프로필</string>
-    <string name="manege">데이터 관리</string>
+    <string name="setting">Settings</string>
+    <string name="normal">色とプロフィール</string>
+    <string name="manege">データ管理</string>
+
+    <string name="data_backup">データの保存</string>
+    <string name="data_backup_explain">データをGoogleのドライブに保存します。</string>
+    <string name="data_backup_message">データをGoogleのドライブに保存します。\n保存しますか？</string>
+    <string name="upload_complete">保存が完了しました。</string>
     
-    <string name="data_backup">데이터 저장</string>
-    <string name="data_backup_explain">데이터를 구글 드라이브에 저장합니다.</string>
-    <string name="data_backup_message">데이터를 구글 드라이브에 저장합니다.\n저장하시겠습니까?</string>
-    <string name="upload_complete">저장이 완료 되었습니다.</string>
-    
-    <string name="data_restore">데이터 복구</string>
-    <string name="data_restore_eplain">구글 드라이브에 저장된 데이터를 복구 합니다.</string>
-    <string name="data_restore_message">복구 시 현재 데이터는 사라집니다.\n복구 하시겠습니까?</string>
-    <string name="download_complete">복구가 완료 되었습니다.</string>
-    
-    <string name="data_initialization">데이터 초기화</string>
-    <string name="data_initialization_explain">데이터 초기화를 초기화 합니다.</string>
-    <string name="data_initialization_message">데이터 초기화를 초기화 합니다.초기화 하면 모든 데이터가 사라집니다.\n초기화 하시겠습니까?</string>
-    
-    <string name="eat_eplain">시간표에 보여지는 먹기의 색상을 변경합니다.</string>
-    <string name="play_eplain">시간표에 보여지는 놀기의 색상을 변경합니다.</string>
-    <string name="sleep_eplain">시간표에 보여지는 잠자기의 색상을 변경합니다.</string>
-    <string name="etc_eplain">시간표에 보여지는 기타의 색상을 변경합니다.</string>
-    
-    <string name="baby_profile">아기 프로필</string>
-    <string name="baby_profile_eplain">이름, 생년 월일을 입력합니다.</string>
-    
-    <string name="baby_name">이 름</string>
-    <string name="birthday">생년월일</string>
-    <string name="selectdate">날짜 설정</string>
+
+    <string name="data_restore">データ復旧</string>
+    <string name="data_restore_eplain">Googleのドライブに保存されたデータを回復します。</string>
+    <string name="data_restore_message">回復時現在のデータは消えてしまいます。\n回復しますか？</string>
+    <string name="download_complete">回復が完了しました。</string>
+
+    <string name="data_initialization">データの初期化</string>
+    <string name="data_initialization_explain">データの初期化を初期化します。</string>
+    <string name="data_initialization_message">データの初期化を初期化します。初期化すると、すべてのデータが失われます。\n初期化しますか？</string>
+
+    <string name="eat_eplain">時刻表に表示される食べるの色を変更します。</string>
+    <string name="play_eplain">時刻表に表示されることの色を変更します。</string>
+    <string name="sleep_eplain">時刻表に表示されるスリープの色を変更します。</string>
+    <string name="etc_eplain">時刻表に表示されるなどの色を変更します。</string>
+    <string name="baby_profile">ベビープロフィール</string>
+    <string name="baby_profile_eplain">名前、生年月日を入力します。</string>
+    <string name="baby_name">名前</string>
+    <string name="birthday">生年月日</string>
+    <string name="selectdate">Select Date</string>
 
 </resources>
