--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,87 +5,90 @@
     <string name="app_name">아기 시간표</string>
     <string name="first">first</string>
     <string name="second">second</string>
-    <string name="count_day">th day</string>
-    <string name="action_text1">\'s</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_help">Help</string>
+    <string name="count_day">일</string>
+    <string name="action_text1">`s</string>
+    <string name="action_settings">설정</string>
+    <string name="action_help">도움말</string>
+    <string name="save"> 저 장 </string>
+    <string name="cancel"> 취 소 </string>
+    <string name="confirm">확 인</string>
+    <string name="stime_titile">시작 시간</string>
+    <string name="etime_titile">종료 시간</string>
+    <string name="minus_small_time">-20분</string>
+    <string name="minus_big_time">-5분</string>
+    <string name="plus_small_time">+5분</string>
+    <string name="plus_big_time">+20분</string>
+    <string name="memo">메 모</string>
+    <string name="memo_hint">메모를 입력하세요</string>
+    <string name="notice">* 수유와 놀이 수면만 그래프에 표시 됩니다.</string>
+    <string name="empty_data">아래 버튼을 눌러 아기의 패턴을 입력하세요.</string>
+    <string name="time_err1">마지막으로 지정한 시간보다 빠른 시간으로 설정 할 수 없습니다.</string>
+    <string name="time_err2">시작 시간보다  빠른 시간으로 설정 할 수 없습니다.</string>
+    <string name="time_err3">종료 시간보다  늦은 시간으로 설정 할 수 없습니다.</string>
+    <string name="time_err4">종료 시간 입력은 오늘만 가능합니다.</string>
+    <string name="screenshot">스크린샷이 저장되었습니다.</string>
+    <string name="share">공유 하기</string>
     
-    <string name="save">Save</string>
-    <string name="cancel"> Cancel </string>
-    <string name="confirm">O  K</string>
-    <string name="stime_titile">Start Time</string>
-    <string name="etime_titile">End Time</string>
-    <string name="minus_small_time">-20min</string>
-    <string name="minus_big_time">-5min</string>
-    <string name="plus_small_time">+5min</string>
-    <string name="plus_big_time">+20min</string>
-    <string name="memo">M e m o</string>
-    <string name="memo_hint">Please enter a Memo</string>
-    <string name="notice">* Click the chart, show the Memo * </string>
-    <string name="empty_data">Click the button to enter your baby\'s pattern.</string>
-    <string name="time_err1">you can not set faster than the last input time.</string>
-    <string name="time_err2">It can not be set faster than the Start time.</string>
-    <string name="time_err3">It can not be set later than the End time.</string>
-    <string name="time_err4">The End Time input only today possible.</string>
 
     <!-- Tab Title -->
-    <string name="eating">Eat</string>
-    <string name="playing">Play</string>
-    <string name="sleeping">Sleep</string>
-    <string name="etc">Etc.</string>
+    <string name="eating">먹 기</string>
+    <string name="playing">놀 기</string>
+    <string name="sleeping">잠 자 기</string>
+    <string name="etc">기 타</string>
 
     <!-- 먹기 Tab -->
-    <string name="mothersmilk">Mother\'s Milk</string>
-    <string name="milkpowder">Milk Powder</string>
-    <string name="babyfood">Baby Food</string>
-    <string name="eating_type_direct">Breast Feeding</string>
-    <string name="eating_type_bottle">Bottle Feeding</string>
+    <string name="mothersmilk">모 유</string>
+    <string name="milkpowder">분 유</string>
+    <string name="babyfood">이 유 식</string>
+    <string name="eating_type_direct">직접 수유</string>
+    <string name="eating_type_bottle">유축 수유</string>
     <string name="minus_small_ml">-20ml</string>
     <string name="minus_big_ml">-10ml</string>
     <string name="plus_small_ml">+10ml</string>
     <string name="plus_big_ml">+20ml</string>
 
     <!-- 놀기 Tab -->
-    <string name="mom">Mom</string>
-    <string name="daddy">Daddy</string>
-    <string name="toy">With Toy</string>
-
+    <string name="mom">엄 마</string>
+    <string name="daddy">아 빠</string>
+    <string name="toy">장난감</string>
+    
     <!-- 잠자기 Tab -->
-    <string name="nap">Nap</string>
-    <string name="night_sleep">Night Sleep</string>
+    <string name="nap">낮 잠</string>
+    <string name="night_sleep">밤 잠</string>
 
     <!-- 기타 Tab -->
-    <string name="bath">Bath</string>
-    <string name="babypoo">Baby Poo</string>
+    <string name="bath">목 욕</string>
+    <string name="babypoo">아기 응가</string>
 
     <!-- 설정 -->
-    <string name="setting">Settings</string>
-    <string name="normal">Colors and Profile</string>
-    <string name="manege">Data Management</string>
-
-    <string name="data_backup">Data Save</string>
-    <string name="data_backup_explain">Save your data on Google Drive.</string>
-    <string name="data_backup_message">Save your data on Google Drive.\nDo you want to save?</string>
-    <string name="upload_complete">Save completed</string>
+    <string name="setting">설 정</string>
+    <string name="normal">색상 및 프로필</string>
+    <string name="manege">데이터 관리</string>
     
-
-    <string name="data_restore">Data Recovery</string>
-    <string name="data_restore_eplain">To recover the data stored in Google Drive.</string>
-    <string name="data_restore_message">The current data disappears during recovery.\nDo you want to recover?</string>
-    <string name="download_complete">Recovery is complete.</string>
-
-    <string name="data_initialization">Initialization data</string>
-    <string name="data_initialization_explain">Initialize the data.</string>
-    <string name="data_initialization_message">To initialize the data, all data will be lost when you initialize.\nDo you want to initialize?</string>
-
-    <string name="eat_eplain">Change the colors shown in the Chart of Eating.</string>
-    <string name="play_eplain">Change the colors shown in the Chart of Playing.</string>
-    <string name="sleep_eplain">Change the colors shown in the Chart of Sleeping</string>
-    <string name="etc_eplain">Change the colors shown in the Chart of Etc.</string>
-    <string name="baby_profile">Baby Profile</string>
-    <string name="baby_profile_eplain">Enter the name, date of birth.</string>
-    <string name="baby_name">Name</string>
-    <string name="birthday">BirthDay</string>
-    <string name="selectdate">Select Date</string>
+    <string name="data_backup">데이터 저장</string>
+    <string name="data_backup_explain">데이터를 구글 드라이브에 저장합니다.</string>
+    <string name="data_backup_message">데이터를 구글 드라이브에 저장합니다.\n저장하시겠습니까?</string>
+    <string name="upload_complete">저장이 완료 되었습니다.</string>
     
+    <string name="data_restore">데이터 복구</string>
+    <string name="data_restore_eplain">구글 드라이브에 저장된 데이터를 복구 합니다.</string>
+    <string name="data_restore_message">복구 시 현재 데이터는 사라집니다.\n복구 하시겠습니까?</string>
+    <string name="download_complete">복구가 완료 되었습니다.</string>
+    
+    <string name="data_initialization">데이터 초기화</string>
+    <string name="data_initialization_explain">데이터 초기화를 초기화 합니다.</string>
+    <string name="data_initialization_message">데이터 초기화를 초기화 합니다.초기화 하면 모든 데이터가 사라집니다.\n초기화 하시겠습니까?</string>
+    
+    <string name="eat_eplain">시간표에 보여지는 먹기의 색상을 변경합니다.</string>
+    <string name="play_eplain">시간표에 보여지는 놀기의 색상을 변경합니다.</string>
+    <string name="sleep_eplain">시간표에 보여지는 잠자기의 색상을 변경합니다.</string>
+    <string name="etc_eplain">시간표에 보여지는 기타의 색상을 변경합니다.</string>
+    
+    <string name="baby_profile">아기 프로필</string>
+    <string name="baby_profile_eplain">이름, 생년 월일을 입력합니다.</string>
+    
+    <string name="baby_name">이 름</string>
+    <string name="birthday">생년월일</string>
+    <string name="selectdate">날짜 설정</string>
+
 </resources>
